--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,6 +52,7 @@ contact: >
 
 projects:
 - {name: 'Dashboard', folder: 'proj-1', file: 'projects/proj-1.html'}
+- {name: 'Fullstack tech-talk', folder: 'proj-2', file: 'projects/proj-2.html'}
 #- {name: 'Project Two', folder: 'proj-2', file: 'projects/proj-2.html'}
 
 #-------------------------------
