project 4: Social Hub

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -53,6 +53,7 @@ contact: >
 projects:
 - {name: 'Dashboard', folder: 'proj-1', file: 'projects/proj-1.html'}
 - {name: 'Fullstack tech-talk', folder: 'proj-2', file: 'projects/proj-2.html'}
+- {name: 'Social Hub', folder: 'proj-4', file: 'projects/proj-4.html'}
 #- {name: 'Project Two', folder: 'proj-2', file: 'projects/proj-2.html'}
 
 #-------------------------------
