--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -57,6 +57,7 @@ projects:
 - {name: 'Code Contest Cruncher', folder: 'proj-5', file: 'projects/proj-5.html'}
 - {name: 'Fullstack tech-talk', folder: 'proj-2', file: 'projects/proj-2.html'}
 ###- {name: 'OMID', folder: 'proj-3', file: 'projects/proj-3.html'}
+- {name: 'React Native Currency Converter', folder: 'proj-6', file: 'projects/proj-6.html'}
 
 #-------------------------------
 # Contact Section
